SERVER-44333 Extend write concern validation for mongos

Mongos should not accept an empty (default) write concern for commands that do not support write concerns.

(cherry picked from commit e0077e34ae71580f99205db961980f0403665652)